--- a/app.css
+++ b/app.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
 }
 
+
 label,
 input,
 textarea {
@@ -91,6 +92,7 @@ button:active {
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
   padding: 1rem;
   margin: 1rem;
+  background-color: white;
 }
 
 .projects li h2 {
